[package]
name = "gsm-ingress-whatsapp"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
time = { workspace = true }
gsm-core = { workspace = true }
gsm-idempotency = { workspace = true }
gsm-ingress-common = { workspace = true }
gsm-dlq = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
security = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
