[package]
name = "messaging-egress"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
gsm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
greentic-types = { workspace = true }
