[package]
name = "messaging-egress"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
gsm-core = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
greentic-types = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
thiserror = { workspace = true }
gsm-bus = { path = "../../crates/gsm-bus" }

[dev-dependencies]
axum = { workspace = true, features = ["macros", "json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
futures = { workspace = true }
messaging-gateway = { path = "../messaging-gateway" }
gsm-bus = { path = "../../crates/gsm-bus" }
