[package]
name = "gsm-egress"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging egress worker: consumes normalized envelopes and delivers platform-specific payloads."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
gsm-core = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
greentic-types = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
thiserror = { workspace = true }
gsm-bus = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["macros", "json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
futures = { workspace = true }
gsm-gateway = { path = "../messaging-gateway" }
gsm-bus = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
semver = "1"
time = { workspace = true }
