[package]
name = "messaging-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true, features = ["macros"] }
gsm-core = { workspace = true }
greentic-types = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
messaging-core = { workspace = true }
