[package]
name = "messaging-gateway"
version = "0.1.0"
edition = "2024"

[lib]
name = "messaging_gateway"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true, features = ["macros"] }
gsm-core = { workspace = true, features = ["nats"] }
gsm-telemetry = { workspace = true }
greentic-types = { workspace = true }
metrics = { workspace = true }
hyper = { workspace = true }
gsm-bus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
adaptive-cards = ["gsm-core/adaptive-cards"]
