[package]
name = "gsm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging gateway: ingress normalization and worker forwarding."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"

[lib]
name = "gsm_gateway"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true, features = ["macros"] }
gsm-core = { workspace = true, features = ["nats"] }
gsm-telemetry = { workspace = true }
greentic-types = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
metrics = { workspace = true }
hyper = { workspace = true }
gsm-bus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
adaptive-cards = ["gsm-core/adaptive-cards"]

[dev-dependencies]
semver = { workspace = true }
