[package]
name = "messaging-tenants"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Greentic messaging package: messaging tenants."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
gsm-core = { workspace = true }
greentic-secrets = { workspace = true, features = ["core", "spec"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync", "macros"] }
