[package]
name = "mock-telegram"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gsm-telemetry = { path = "../../libs/telemetry" }
