[package]
name = "mock-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: mock telegram."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gsm-telemetry = { workspace = true }
