[package]
name = "gsm-runner"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
chaos = []

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_bw = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-dlq = { path = "../../libs/dlq" }
futures = { workspace = true }
rand = { workspace = true }
gsm-telemetry = { workspace = true }

[dev-dependencies]
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-idempotency = { path = "../../libs/idempotency" }
tracing-subscriber = { workspace = true }
