[package]
name = "gsm-runner"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
chaos = []

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_bw = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
gsm-core = { workspace = true }
gsm-dlq = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
gsm-backpressure = { workspace = true }
gsm-idempotency = { workspace = true }
tracing-subscriber = { workspace = true }
