[package]
name = "gsm-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: runner."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"

[[bin]]
name = "gsm-runner"
path = "src/main.rs"
[features]
default = []
chaos = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_bw = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
gsm-core = { workspace = true }
gsm-session = { workspace = true }
gsm-dlq = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
gsm-telemetry = { workspace = true }
greentic-pack-lib = { workspace = true }

[dev-dependencies]
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-idempotency = { path = "../../libs/idempotency" }
tracing-subscriber = { workspace = true }
