[package]
name = "gsm-slack-oauth"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gsm-telemetry = { path = "../../libs/telemetry" }
tracing = { workspace = true }
greentic-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
async-trait = { workspace = true }
gsm-core = { path = "../../libs/core" }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
