[package]
name = "gsm-slack-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: slack_oauth."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gsm-telemetry = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
async-trait = { workspace = true }
gsm-core = { path = "../../libs/core" }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
