[package]
name = "gsm-subscriptions-teams"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
futures = "0.3.31"
