[package]
name = "gsm-subscriptions-teams"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
gsm-telemetry = { workspace = true }
