[package]
name = "gsm-subscriptions-teams"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging subscriptions worker."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"

[lib]
name = "gsm_subscriptions_teams"
path = "src/lib.rs"

[[bin]]
name = "gsm-subscriptions-teams"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
greentic-pack-lib = { workspace = true }
greentic-types = { workspace = true }
gsm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
