[package]
name = "greentic-webchat-conformance"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json"] }
greentic-messaging-providers-webchat = { path = "../../providers/webchat" }
greentic-types = "0.2.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
greentic-secrets = "0.2.1"

[dependencies]
serde_json = "1"
