[package]
name = "greentic-messaging-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified CLI wrapper for Greentic messaging services (ingress/egress/test/admin tooling)."

[[bin]]
name = "greentic-messaging"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
