[package]
name = "greentic-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified CLI wrapper for Greentic messaging services (ingress/egress/test/admin tooling)."
repository.workspace = true

[package.metadata.binstall]
pkg-url = "https://github.com/greentic-ai/greentic-messaging/releases/download/v{ version }/greentic-messaging-{ target }.{ archive-format }"
pkg-fmt = "tgz"
pkg-fmt-windows = "zip"
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

[[bin]]
name = "greentic-messaging"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
gsm-core = { workspace = true }
greentic-config = "0.4"
greentic-config-types = "0.4"
greentic-types = { workspace = true }
greentic-flow = { workspace = true }
greentic-pack-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_bw = { workspace = true }
semver = { workspace = true }
time = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
greentic-types = { workspace = true }
semver = "1"
zip = { workspace = true }
serde_json = { workspace = true }
greentic-flow = { workspace = true }
greentic-pack-lib = { workspace = true }
indexmap = "2"
